--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/localize": "~13.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.10.2",
+    "autoprefixer": "^10.4.7",
+    "bootstrap": "^5.1.3",
+    "postcss": "^8.4.14",
     "rxjs": "~7.5.0",
+    "tailwindcss": "^3.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
